# amqprs

./: .gitignore  Cargo.toml  LICENSE  README.md  amqp_rs.pyi  amqpr.pyi  build_whells.sh  pyproject.toml  sender.py
benchmark/: publish_sub_pure.py  publish_sub_pure_sequential.py  publish_sub_rs.py  publish_sub_rs_sequential.py  rpc_client_server_pure.py  rpc_client_server_rs.py  rpc_client_server_rs_sequential.py  uv_publish_sub_pure.py  uv_publish_sub_pure_cuncurrent.py  uv_publish_sub_pure_parallel.py  uv_publish_sub_rs.py  uv_publish_sub_rs_cuncurrent.py  uv_publish_sub_rs_parallel.py  uv_publish_sub_rs_sequential.py
benchmarks/: publish_sub_rs_sequential.py  rpc_client_server_pure_sequential.py  rpc_client_server_rs_sequential.py  run_benchmark.sh  uv_publish_sub_pure_parallel.py  uv_publish_sub_pure_sequential.py  uv_publish_sub_rs_cuncurrent.py  uv_publish_sub_rs_parallel.py  uv_publish_sub_rs_sequential.py  uv_rpc_rs_cuncurrent.py
bindings/node/: .gitattributes  Cargo.toml  browser.js  build_node.sh  index.d.ts  index.js  package.json
bindings/node/benchmark/: publish_sub_rs_cuncurrent.ts
bindings/node/dist_node/: amqp-rs.wasi-browser.js  amqp-rs.wasi.cjs  index.d.ts  index.js
bindings/node/src/: exceptions.rs  lib.rs
bindings/python/: Cargo.toml  README.md  build_whells.sh  pyproject.toml
bindings/python/benchmarks/: publish_sub_pure_sequential.py  uv_publish_sub_rs_cuncurrent.py  uv_rpc_pure_cuncurrent.py
bindings/python/src/: exceptions.rs  lib.rs
bindings/python/tests/integration/: test_rpc_provider.py  test_subscribe.py
core/: Cargo.toml
core/src/: lib.rs
external_config/rabbitmq/: rabbitmq.conf
src/: lib.rs
tests/integration/: test_no_tls.py  test_publish.py  test_rpc_provider.py  test_subscribe.py  test_tls.py
