[package]
name = "amqp-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "amqp_rs"
crate-type = ["cdylib"]

[dependencies]
amqp-client-rust = { version = "0.0.3-alpha.5", feature = ["tls"] }
once_cell = "1.21.3"
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = "1.40.0"

[profile.release]
lto = "fat"          # Link Time Optimization: enables cross-crate optimizations
codegen-units = 1    # Slower compile, but better code generation (allows more inlining)
panic = "abort"      # Removes stack unwinding code, making binary smaller and slightly faster
strip = true         # Removes symbols (optional, keeps binary small)
opt-level = 3        # Maximum optimization