[package]
name = "amqp-rs"
version = "0.1.0"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "amqp_rs"
crate-type = ["cdylib"]

[dependencies]
amqp-client-rust = { version = "=0.0.3-alpha.16", features = ["tls", "zstd", "lz4_flex", "flate2"] }
once_cell = "1.21"
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

tokio = "1"

tokio-rustls = { version = "0.26" }
rustls-pemfile = { version = "2.1" }
rustls-webpki = { version = "0.103" }
webpki-roots = { version = "0.26" }
rustls-pki-types = { version = "1.7" }

[target.'cfg(target_os = "linux")'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
[target.'cfg(not(target_os = "linux"))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[profile.release]
lto = "fat"          # Link Time Optimization: enables cross-crate optimizations
codegen-units = 1    # Slower compile, but better code generation (allows more inlining)
panic = "abort"      # Removes stack unwinding code, making binary smaller and slightly faster
strip = true         # Removes symbols (optional, keeps binary small)
opt-level = 3        # Maximum optimization
