[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "amqpr"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "amqp-client-python>=0.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "uvloop>=0.21.0",
]
