[package]
name = "amqp-rs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21"
tokio = "1"
tokio-rustls = { version = "0.26", default-features = false }
rustls-pemfile = { version = "2.1" }
rustls-webpki = { version = "0.103" }
webpki-roots = { version = "0.26" }
rustls-pki-types = { version = "1.7" }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }